validation removed and skip option added

--- a/Overtime/Views/Food/Index.cshtml
+++ b/Overtime/Views/Food/Index.cshtml
@@ -33,7 +33,7 @@
                     <i class="fas fa-star" id="b_excellent" onclick="emoji(this.id)"></i>
                 </div>
                 <div class="lbl_feedback">
-                    <label id="lbl_BreakfastFeedback" name="Breakfast" for="html"></label><br> 
+                    <label id="lbl_BreakfastFeedback" name="Breakfast" for="html"></label><br>
                 </div>
             </div>
         </div>
@@ -62,7 +62,7 @@
             </div>
         </div>
         <div class="form-group">
-            <p>𝐇𝐨𝐰 𝐰𝐨𝐮𝐥𝐝 𝐲𝐨𝐮 𝐥𝐢𝐤𝐞 𝐭𝐨 𝐫𝐚𝐭𝐞 𝐲𝐞𝐬𝐭𝐞𝐫𝐝𝐚𝐲'𝐬 𝐝𝐢𝐧𝐧𝐞𝐫?آپ کل کے کھانے کی درجہ بندی کیسے کرنا چاہیں گے<p/>
+            <p>𝐇𝐨𝐰 𝐰𝐨𝐮𝐥𝐝 𝐲𝐨𝐮 𝐥𝐢𝐤𝐞 𝐭𝐨 𝐫𝐚𝐭𝐞 𝐲𝐞𝐬𝐭𝐞𝐫𝐝𝐚𝐲'𝐬 𝐝𝐢𝐧𝐧𝐞𝐫?آپ کل کے کھانے کی درجہ بندی کیسے کرنا چاہیں گے<p />
             <div class="feedbackbox">
                 <div class="s_emoji">
                     <div id="s_emoji">
@@ -96,7 +96,12 @@
 
         <div class="form-group">
             <button type="button" id="submit" class="submit-button" onclick="AddFoodDetails();">
-                𝑺𝒖𝒃𝒎𝒊𝒕
+                𝗦𝘂𝗯𝗺𝗶𝘁
+            </button>
+        </div>
+        <div class="form-group">
+            <button type="button" id="Skip" class="skip-button" onclick="SkipFoodFeedback();">
+                𝗦𝗸𝗶𝗽
             </button>
         </div>
     </form>
