--- a/Overtime/Views/Food/FeedbackReport.cshtml
+++ b/Overtime/Views/Food/FeedbackReport.cshtml
@@ -9,13 +9,6 @@
                 <h3>Daily Food FeedBack Reports</h3>
             </div>
             <div class="row">
-                <div class="col-md-1">
-                    <div class="form-group">
-                        <div class="form-group">
-                            <label class="control-label">Select Date</label>
-                        </div>
-                    </div>
-                </div>
                 <div class="col-md-3">
                     <div class="form-group">
                         <label class="control-label">Date Range</label>
@@ -25,7 +18,7 @@
                 <div class="col-md-1">
                     <div class="form-group" align="justify">
                         <label class="control-label"></label>
-                        <input type="submit" onclick="GetFoodFeedBackDaily();" class="btn btn-primary" />
+                        <input type="submit" style="margin-top:28px;" onclick="GetFoodFeedBackDaily();" class="btn btn-primary" />
                     </div>
                 </div>
             </div>
