--- a/Overtime/Views/UserShift/UserShiftData.cshtml
+++ b/Overtime/Views/UserShift/UserShiftData.cshtml
@@ -4,7 +4,7 @@
     Layout = null;
 }
 
-
+<div class="table table-responsive">
 <table class="table nowrap" id="mytable">
     <thead>
         <tr>
@@ -101,3 +101,4 @@
 }
     </tbody>
 </table>
+</div>
