--- a/Overtime/Views/User/Create.cshtml
+++ b/Overtime/Views/User/Create.cshtml
@@ -42,6 +42,12 @@
                                 </select>
                             </div>
                             <div class="form-group">
+                                <label asp-for="u_accomodation" class="control-label"></label>
+                                <select asp-for="u_accomodation" class="form-control" asp-items="@(new SelectList(ViewBag.Accomodation,"ac_id","ac_name"))" required>
+                                    <option value="">Select Accomodation</option>
+                                </select>
+                            </div>
+                            <div class="form-group">
                                 <label asp-for="u_allocation_yn" class="control-label"></label>
                                 <select asp-for="u_allocation_yn" class="form-control" required>
                                     <option value="">Select Option</option>
