--- a/Overtime/Views/User/Edit.cshtml
+++ b/Overtime/Views/User/Edit.cshtml
@@ -41,6 +41,12 @@
                                     <select asp-for="u_role_id" class="form-control" asp-items="@(new SelectList(ViewBag.RoleList,"r_id","r_description"))" required></select>
                                 </div>
                                 <div class="form-group">
+                                    <label asp-for="u_accomodation" class="control-label"></label>
+                                    <select asp-for="u_accomodation" class="form-control" asp-items="@(new SelectList(ViewBag.Accomodation,"ac_id","ac_name"))" required>
+                                        <option value="">Select Accomodation</option>
+                                    </select>
+                                </div>
+                                <div class="form-group">
                                     <label asp-for="u_allocation_yn" class="control-label"></label>
                                     <select asp-for="u_allocation_yn" class="form-control" required>
                                         <option value="">Select Option</option>
