--- a/Overtime/Views/InAndOut/InAndOutReport.cshtml
+++ b/Overtime/Views/InAndOut/InAndOutReport.cshtml
@@ -13,6 +13,15 @@
     <div class="card">
         <div class="card-body">
             <div class="row">
+
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <label class="control-label">Accomodation</label>
+                        <select id="ac_id" class="form-control" asp-items="@(new SelectList(ViewBag.Accomodation,"ac_id","ac_name"))">
+                            <option value="">Select Accomodation</option>
+                        </select>
+                    </div>
+                </div>
                 <div class="col-md-3">
                     <div class="form-group">
                         <label class="control-label">Select User</label>
