--- a/Overtime/Views/InAndOut/InAndOutReport.cshtml
+++ b/Overtime/Views/InAndOut/InAndOutReport.cshtml
@@ -42,7 +42,7 @@
                 <div class="col-md-1">
                     <div class="form-group" align="justify">
                         <input type="submit" onclick="getInAndOutReport();" style="margin-top:25px" class="btn btn-primary" />
-                        <button class="btn btn-warning" onclick="AddRegularizationPunch(); " style="margin-top:25px">Add</button>
+                        @*<button class="btn btn-warning" onclick="AddRegularizationPunch(); " style="margin-top:25px">Add</button>*@
                     </div>
                 </div>
 
