--- a/Overtime/Views/InAndOut/AccommodationWiseInAndOut.cshtml
+++ b/Overtime/Views/InAndOut/AccommodationWiseInAndOut.cshtml
@@ -28,12 +28,12 @@
                         <br />
                         <div class="col-sm-4">
                             <label class="radio-inline">
-                                <input type="radio" name="InAndOut" value="All">&nbsp &nbsp &nbsp All
+                                <input type="radio" name="InAndOut"  value="All" checked>&nbsp &nbsp &nbsp All
                             </label>
                         </div>
                         <div class="col-sm-4">
                             <label class="radio-inline">
-                                <input type="radio" name="InAndOut" checked value="In"> &nbsp &nbsp &nbsp In
+                                <input type="radio" name="InAndOut"  value="In"> &nbsp &nbsp &nbsp In
                             </label>
                         </div>
 
