--- a/Overtime/Views/User/Edit.cshtml
+++ b/Overtime/Views/User/Edit.cshtml
@@ -47,6 +47,28 @@
                                     </select>
                                 </div>
                                 <div class="form-group">
+                                    <label asp-for="u_joining_date" class="control-label"></label>
+                                    <input asp-for="u_joining_date" class="form-control" required />
+                                    <span asp-validation-for="u_joining_date" class="text-danger"></span>
+                                </div>
+                                <div class="form-group">
+                                    <label asp-for="u_grade" class="control-label"></label>
+                                    <select asp-for="u_grade" class="form-control" required>
+                                        <option value="0">Select Grade</option>
+                                        <option value="1">1</option>
+                                        <option value="2">2</option>
+                                        <option value="3">3</option>
+                                        <option value="4">4</option>
+                                        <option value="5">5</option>
+                                        <option value="6">6</option>
+                                        <option value="7">7</option>
+                                        <option value="8">8</option>
+                                        <option value="9">9</option>
+                                        <option value="10">10</option>
+                                    </select>
+                                    <span asp-validation-for="u_allocation_yn" class="text-danger"></span>
+                                </div>
+                                <div class="form-group">
                                     <label asp-for="u_allocation_yn" class="control-label"></label>
                                     <select asp-for="u_allocation_yn" class="form-control" required>
                                         <option value="">Select Option</option>
