--- a/Overtime/Views/Leave/Index.cshtml
+++ b/Overtime/Views/Leave/Index.cshtml
@@ -41,6 +41,7 @@
                                     <div class="form-row">
                                         <div class="form-group col-md-4">
                                             <input type="hidden" id="l_id" name="l_id" value="0"/>
+                                            <input type="hidden" id="AttachmentRequired" name="AttachmentRequired" value="N"/>
                                             <label>Leave For</label>
                                             @if (ViewBag.LeaveRequestForOthers == null)
                                             {
@@ -144,11 +145,11 @@
                                     </div>
                                     <div class="col-md-4">
                                         <div class="form-check form-check-inline">
-                                            <input class="form-check-input" type="checkbox" name="l_salary_required" value="Y">
+                                            <input class="form-check-input" type="radio" name="l_salary_required" value="Y">
                                             <label class="form-check-label" for="inlineCheckbox1">Yes</label>
                                         </div>
                                         <div class="form-check form-check-inline">
-                                            <input class="form-check-input" type="checkbox" name="l_salary_required" value="N" checked> 
+                                            <input class="form-check-input" type="radio" name="l_salary_required" value="N" checked> 
                                             <label class="form-check-label" for="inlineCheckbox2">No</label>
                                         </div>
                                     </div>
@@ -211,7 +212,7 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-success ml-2" onclick="createOrUpdateLeave()" >Save</button>
+                <button type="button" class="btn btn-success ml-2" id="upd_btn" onclick="createOrUpdateLeave()" >Save</button>
                 <button type="button" class="btn btn-secondary ml-2" data-dismiss="modal">Close</button>
             </div>
         </div>
