--- a/Overtime/Views/Leave/LeaveApproval.cshtml
+++ b/Overtime/Views/Leave/LeaveApproval.cshtml
@@ -33,7 +33,8 @@
             </div>
             <div class="modal-footer">
 
-                @*<button type="button" class="btn btn-success" onclick="ApproveLeave()">Approve</button>*@
+                <button type="button" class="btn btn-success" onclick="HrLeaveApprove('Approved')">Approve</button>
+                <button type="button" class="btn btn-danger" onclick="HrLeaveApprove('Rejected')">Reject</button>
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
             </div>
         </div>
