--- a/Overtime/Views/User/Create.cshtml
+++ b/Overtime/Views/User/Create.cshtml
@@ -32,7 +32,7 @@
                             </div>
                             <div class="form-group">
                                 <label asp-for="u_email" class="control-label"></label>
-                                <input asp-for="u_email" class="form-control" required />
+                                <input asp-for="u_email" class="form-control"  />
                                 <span asp-validation-for="u_email" class="text-danger"></span>
                             </div>
                             <div class="form-group">
@@ -104,6 +104,6 @@
         </div>
     </div>
 
-                @section Scripts {
-                    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-                }
+ @section Scripts {
+     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+ }
