--- a/Overtime/Views/User/Edit.cshtml
+++ b/Overtime/Views/User/Edit.cshtml
@@ -33,7 +33,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label asp-for="u_email" class="control-label"></label>
-                                    <input asp-for="u_email" class="form-control" required />
+                                    <input asp-for="u_email" class="form-control"  />
                                     <span asp-validation-for="u_email" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
@@ -48,12 +48,12 @@
                                 </div>
                                 <div class="form-group">
                                     <label asp-for="u_joining_date" class="control-label"></label>
-                                    <input asp-for="u_joining_date" class="form-control" required />
+                                    <input asp-for="u_joining_date" class="form-control"  />
                                     <span asp-validation-for="u_joining_date" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
                                     <label asp-for="u_grade" class="control-label"></label>
-                                    <select asp-for="u_grade" class="form-control" required>
+                                    <select asp-for="u_grade" class="form-control" >
                                         <option value="0">Select Grade</option>
                                         <option value="1">1</option>
                                         <option value="2">2</option>
