--- a/Overtime/Views/Attendance/MonthReport.cshtml
+++ b/Overtime/Views/Attendance/MonthReport.cshtml
@@ -49,7 +49,7 @@
                     <div class="col-md-1">
                         <div class="form-group" align="justify">
                             <label class="control-label"></label>
-                            <input type="submit" onclick="GetMonthReport();" class="btn btn-primary" />
+                            <input type="submit" onclick="GetMonthReport();" class="btn btn-primary mt-4" />
                         </div>
                     </div>
                 </div>
