--- a/Overtime/Views/Attendance/AttendanceDetailsBySearch.cshtml
+++ b/Overtime/Views/Attendance/AttendanceDetailsBySearch.cshtml
@@ -14,7 +14,8 @@
 }
 else
 {
-    <table class="table" id="mytable">
+<div class="table-responsive">
+    <table class="table table-hover text-nowrap" id="mytable">
         <thead>
             <tr>
                 <th>
@@ -63,51 +64,53 @@ else
         <tbody>
             @foreach (var item in Model)
             {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.a_u_name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.a_full_name)
-                </td>
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.a_u_name)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.a_full_name)
+                    </td>
 
-                <td>
-                    @Html.DisplayFor(modelItem => item.a_department)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.a_duty_start)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.a_first_Punch)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.a_f_punch_loc)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.a_remark)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.a_duty_ended_at)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.a_second_punch)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.a_s_punch_loc)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.a_duration)
-                </td>
-                <td class="status_@item.a_status">
-                    @Html.DisplayFor(modelItem => item.a_status)
-                </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.a_department)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.a_duty_start)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.a_first_Punch)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.a_f_punch_loc)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.a_remark)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.a_duty_ended_at)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.a_second_punch)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.a_s_punch_loc)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.a_duration)
+                    </td>
+                    <td class="status_@item.a_status">
+                        @Html.DisplayFor(modelItem => item.a_status)
+                    </td>
 
-                <td>
-                    @Html.DisplayFor(modelItem => item.a_attendance_date)
-                </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.a_attendance_date)
+                    </td>
 
-            </tr>
+                </tr>
             }
         </tbody>
     </table>
+</div>
+   
 }
