--- a/Overtime/Views/OvertimeRequest/Edit.cshtml
+++ b/Overtime/Views/OvertimeRequest/Edit.cshtml
@@ -20,11 +20,11 @@
                                 <input asp-for="rq_description" class="form-control" />
                                 <span asp-validation-for="rq_description" class="text-danger"></span>
                             </div>
-                            <div class="form-group">
+                            @*<div class="form-group">
                                 <label asp-for="rq_dep_id" class="control-label"></label>
                                 <select asp-for="rq_dep_id" class="form-control" asp-items="@(new SelectList(ViewBag.DepartmentList,"d_id","d_description"))"></select>
                                 <span asp-validation-for="rq_dep_id" class="text-danger"></span>
-                            </div>
+                            </div>*@
                            
 
                             <div class="form-group">
